# ScriptureGuard-AI

./: .env.example  .gitignore  Readme.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/data/: bible_metadata.json  ingest.py
backend/app/evals/: eval_dataset.json  run_evals.py
backend/app/models/: __init__.py  db_models.py  schemas.py
backend/app/pipelines/: chat_pipeline.py
backend/app/routers/: chat.py  health.py  image.py
backend/app/services/: bible_corpus.py  bible_retriever.py  denomination_service.py  historical_fact_checker.py  image_service.py  llm_service.py  logging_service.py  memory_service.py  safety_service.py  verse_validator.py
backend/tests/: test_denomination_context.py  test_health_and_retrieval.py  test_pipeline_behaviour.py  test_safety_service.py  test_verse_validator.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/: _backend.ts
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/chat/stream/: route.ts
frontend/src/app/api/image/generate/: route.ts
frontend/src/app/chat/stream/: route.ts
frontend/src/components/: ChatWindow.tsx  CitationCard.tsx  DenominationPicker.tsx  ImageGenerationLoader.tsx  InputBar.tsx  MessageBubble.tsx  SafetyBanner.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Select.tsx  Textarea.tsx
frontend/src/lib/: api.ts
frontend/src/lib/hooks/: useChat.ts  useSession.ts
frontend/src/types/: index.ts
