[project]
name = "scriptureguard-backend"
version = "0.1.0"
description = "Christianity-focused AI assistant with scripture grounding and safety guards"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "openai>=1.40.0,<2.0.0",
  "pinecone-client>=5.0.0,<6.0.0",
  "langgraph>=0.2.0,<1.0.0",
  "redis>=5.0.0,<6.0.0",
  "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "ruff>=0.6.0,<1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
